Fix for reversed Back button arrow on iOS

--- a/backend-services-offline-hybrid-sample/styles/main.css
+++ b/backend-services-offline-hybrid-sample/styles/main.css
@@ -148,6 +148,7 @@
 }
 
 #kendo-ui-mobile-app .km-back {
+  -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 
